--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.11.6",
     "bemto.jade": "^1.0.0",
     "browser-sync": "^2.10.0",
     "cross-env": "^1.0.7",
@@ -83,7 +84,7 @@
     "gulp-jade": "^1.1.0",
     "gulp-jade-inheritance": "^0.5.3",
     "gulp-jsbeautifier": "^1.0.1",
-	"gulp-phantomcss": "^0.2.0",
+    "gulp-phantomcss": "^0.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-plumber-error-handler": "^1.0.0",
     "gulp-pug-lint": "^0.1.6",
@@ -103,12 +104,13 @@
     "node-notifier": "^4.3.1",
     "npm-install-webpack-plugin": "^2.0.2",
     "npm-run-all": "^1.5.1",
-	"psd": "^3.1.0",
+    "psd": "^3.1.0",
     "pug-lint": "^2.2.2",
     "require-dir": "^0.3.0",
     "rimraf": "^2.5.0",
     "run-sequence": "^1.1.4",
     "rupture": "^0.6.1",
+    "slider": "^1.0.4",
     "source-map-loader": "^0.1.5",
     "spritesmith-dir-checker": "^1.0.0",
     "spritesmith-stylus-retina-template": "^1.0.0",
